css-selector-parser.ts
export type Combinator = " " | "+" | ">";

export interface RuleSet {
  type: "RuleSet";
  selectors: Selector[];  
}

export interface Selector {
  type: "Selector";
  combinator: Combinator;
  left: Selector | SimpleSelector;
  right: Selector | SimpleSelector;
}

export interface SimpleSelector {
  type: "SimpleSelector";
  element?: string;
  qualifiers: {
    ids: IDSelector[];
    classes: ClassSelector[];
    attrs: AttributeSelector[];
  };
}

export interface QualifierSelector {
  type: "IDSelector" | "ClassSelector" | "AttributeSelector";
}

export interface IDSelector extends QualifierSelector {
  type: "IDSelector";
  id: string;
}

export interface ClassSelector extends QualifierSelector {
  type: "ClassSelector";
  class: string;
}

export interface AttributeSelector extends QualifierSelector {
  type: "AttributeSelector";
  attribute: string;
  operator: string;
  value: string;
}

export interface FilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface FileRange {
  start: FilePosition;
  end: FilePosition;
}

export interface LiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface ClassParts extends Array<string | ClassParts> {}

export interface ClassExpectation {
  type: "class";
  parts: ClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface AnyExpectation {
  type: "any";
}

export interface EndExpectation {
  type: "end";
}

export interface OtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = LiteralExpectation | ClassExpectation | AnyExpectation | EndExpectation | OtherExpectation;

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: FileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: FileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }
}

function peg$parse(input: string, options?: ParseOptions): RuleSet {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<{}> = {};

  const peg$startRuleFunctions: {[id: string]: any} = { start: peg$parsestart };
  let peg$startRuleFunction: () => any = peg$parsestart;

  const peg$c0 = "/";
  const peg$c1 = peg$literalExpectation("/", false);
  const peg$c2 = function(): any { return "/"; };
  const peg$c3 = ",";
  const peg$c4 = peg$literalExpectation(",", false);
  const peg$c5 = function(): any { return ","; };
  const peg$c6 = "+";
  const peg$c7 = peg$literalExpectation("+", false);
  const peg$c8 = function(): any { return "+"; };
  const peg$c9 = ">";
  const peg$c10 = peg$literalExpectation(">", false);
  const peg$c11 = function(): any { return ">"; };
  const peg$c12 = function(name: any): any { return name; };
  const peg$c13 = function(selectorsHead: any, selectorsTail: any): RuleSet {
        return {
          type: "RuleSet",
          selectors: buildList(selectorsHead, selectorsTail, 2),
        };
      };
  const peg$c14 = function(left: any, combinator: any, right: any): Selector {
        return {
          type: "Selector",
          combinator: combinator,
          left: left,
          right: right
        };
      };
  const peg$c15 = function(left: any, right: any): Selector {
        return {
          type: "Selector",
          combinator: " ",
          left: left,
          right: right
        };
      };
  const peg$c16 = function(selector: any): SimpleSelector { return selector; };
  const peg$c17 = function(element: any, qualifiers: any): SimpleSelector {
        return {
          type: "SimpleSelector",
          element: element,
          qualifiers: {
            ids: qualifiers.filter((q: QualifierSelector) => q.type === "IDSelector"),
            classes: qualifiers.filter((q: QualifierSelector) => q.type === "ClassSelector"),
            attrs: qualifiers.filter((q: QualifierSelector) => q.type === "AttributeSelector"),
          }
        };
      };
  const peg$c18 = function(qualifiers: any): SimpleSelector {
        return {
          type: "SimpleSelector",
          element: "*",
          qualifiers: qualifiers
        };
      };
  const peg$c19 = function(id: any): IDSelector { return { type: "IDSelector", id: id }; };
  const peg$c20 = ".";
  const peg$c21 = peg$literalExpectation(".", false);
  const peg$c22 = function(class_: any): ClassSelector { return { type: "ClassSelector", "class": class_ }; };
  const peg$c23 = "*";
  const peg$c24 = peg$literalExpectation("*", false);
  const peg$c25 = "[";
  const peg$c26 = peg$literalExpectation("[", false);
  const peg$c27 = "=";
  const peg$c28 = peg$literalExpectation("=", false);
  const peg$c29 = "]";
  const peg$c30 = peg$literalExpectation("]", false);
  const peg$c31 = function(attribute: any, operatorAndValue: any): AttributeSelector {
        return {
          type: "AttributeSelector",
          attribute: attribute,
          operator: extractOptional(operatorAndValue, 0),
          value: extractOptional(operatorAndValue, 2)
        };
      };
  const peg$c32 = ":";
  const peg$c33 = peg$literalExpectation(":", false);
  const peg$c34 = ")";
  const peg$c35 = peg$literalExpectation(")", false);
  const peg$c36 = function(name: any, params: any): any {
            return {
              type: "Function",
              name: name,
              params: params !== null ? [params[0]] : []
            };
          };
  const peg$c37 = function(value: any): any { return { type: "PseudoSelector", value: value }; };
  const peg$c38 = /^[0-9a-f]/i;
  const peg$c39 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);
  const peg$c40 = /^[\x80-\uFFFF]/;
  const peg$c41 = peg$classExpectation([["\x80", "\uFFFF"]], false, false);
  const peg$c42 = "\\";
  const peg$c43 = peg$literalExpectation("\\", false);
  const peg$c44 = "\r\n";
  const peg$c45 = peg$literalExpectation("\r\n", false);
  const peg$c46 = /^[ \t\r\n\f]/;
  const peg$c47 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false);
  const peg$c48 = function(digits: any): any {
        return String.fromCharCode(parseInt(digits, 16));
      };
  const peg$c49 = /^[^\r\n\f0-9a-f]/i;
  const peg$c50 = peg$classExpectation(["\r", "\n", "\f", ["0", "9"], ["a", "f"]], true, true);
  const peg$c51 = function(ch: any): any { return ch; };
  const peg$c52 = /^[_a-z]/i;
  const peg$c53 = peg$classExpectation(["_", ["a", "z"]], false, true);
  const peg$c54 = /^[_a-z0-9\-]/i;
  const peg$c55 = peg$classExpectation(["_", ["a", "z"], ["0", "9"], "-"], false, true);
  const peg$c56 = "\"";
  const peg$c57 = peg$literalExpectation("\"", false);
  const peg$c58 = /^[^\n\r\f\\"]/;
  const peg$c59 = peg$classExpectation(["\n", "\r", "\f", "\\", "\""], true, false);
  const peg$c60 = function(nl: any): any { return ""; };
  const peg$c61 = function(chars: any): any {
        return chars.join("");
      };
  const peg$c62 = "'";
  const peg$c63 = peg$literalExpectation("'", false);
  const peg$c64 = /^[^\n\r\f\\']/;
  const peg$c65 = peg$classExpectation(["\n", "\r", "\f", "\\", "'"], true, false);
  const peg$c66 = "-";
  const peg$c67 = peg$literalExpectation("-", false);
  const peg$c68 = function(prefix: any, start: any, chars: any): any {
        return prefix + start + chars.join("");
      };
  const peg$c69 = function(chars: any): any { return chars.join(""); };
  const peg$c70 = "\n";
  const peg$c71 = peg$literalExpectation("\n", false);
  const peg$c72 = "\r";
  const peg$c73 = peg$literalExpectation("\r", false);
  const peg$c74 = "\f";
  const peg$c75 = peg$literalExpectation("\f", false);
  const peg$c76 = "a";
  const peg$c77 = peg$literalExpectation("a", true);
  const peg$c78 = "0";
  const peg$c79 = peg$literalExpectation("0", false);
  const peg$c80 = /^[Aa]/;
  const peg$c81 = peg$classExpectation(["A", "a"], false, false);
  const peg$c82 = function(): any { return "a"; };
  const peg$c83 = "c";
  const peg$c84 = peg$literalExpectation("c", true);
  const peg$c85 = /^[Cc]/;
  const peg$c86 = peg$classExpectation(["C", "c"], false, false);
  const peg$c87 = function(): any { return "c"; };
  const peg$c88 = "d";
  const peg$c89 = peg$literalExpectation("d", true);
  const peg$c90 = /^[Dd]/;
  const peg$c91 = peg$classExpectation(["D", "d"], false, false);
  const peg$c92 = function(): any { return "d"; };
  const peg$c93 = "e";
  const peg$c94 = peg$literalExpectation("e", true);
  const peg$c95 = /^[Ee]/;
  const peg$c96 = peg$classExpectation(["E", "e"], false, false);
  const peg$c97 = function(): any { return "e"; };
  const peg$c98 = "g";
  const peg$c99 = peg$literalExpectation("g", true);
  const peg$c100 = /^[Gg]/;
  const peg$c101 = peg$classExpectation(["G", "g"], false, false);
  const peg$c102 = "\\g";
  const peg$c103 = peg$literalExpectation("\\g", true);
  const peg$c104 = function(): any { return "g"; };
  const peg$c105 = "h";
  const peg$c106 = peg$literalExpectation("h", true);
  const peg$c107 = /^[Hh]/;
  const peg$c108 = peg$classExpectation(["H", "h"], false, false);
  const peg$c109 = "\\h";
  const peg$c110 = peg$literalExpectation("\\h", true);
  const peg$c111 = function(): any { return "h"; };
  const peg$c112 = "i";
  const peg$c113 = peg$literalExpectation("i", true);
  const peg$c114 = /^[Ii]/;
  const peg$c115 = peg$classExpectation(["I", "i"], false, false);
  const peg$c116 = "\\i";
  const peg$c117 = peg$literalExpectation("\\i", true);
  const peg$c118 = function(): any { return "i"; };
  const peg$c119 = "k";
  const peg$c120 = peg$literalExpectation("k", true);
  const peg$c121 = /^[Kk]/;
  const peg$c122 = peg$classExpectation(["K", "k"], false, false);
  const peg$c123 = "\\k";
  const peg$c124 = peg$literalExpectation("\\k", true);
  const peg$c125 = function(): any { return "k"; };
  const peg$c126 = "l";
  const peg$c127 = peg$literalExpectation("l", true);
  const peg$c128 = /^[Ll]/;
  const peg$c129 = peg$classExpectation(["L", "l"], false, false);
  const peg$c130 = "\\l";
  const peg$c131 = peg$literalExpectation("\\l", true);
  const peg$c132 = function(): any { return "l"; };
  const peg$c133 = "m";
  const peg$c134 = peg$literalExpectation("m", true);
  const peg$c135 = /^[Mm]/;
  const peg$c136 = peg$classExpectation(["M", "m"], false, false);
  const peg$c137 = "\\m";
  const peg$c138 = peg$literalExpectation("\\m", true);
  const peg$c139 = function(): any { return "m"; };
  const peg$c140 = "n";
  const peg$c141 = peg$literalExpectation("n", true);
  const peg$c142 = /^[Nn]/;
  const peg$c143 = peg$classExpectation(["N", "n"], false, false);
  const peg$c144 = "\\n";
  const peg$c145 = peg$literalExpectation("\\n", true);
  const peg$c146 = function(): any { return "n"; };
  const peg$c147 = "o";
  const peg$c148 = peg$literalExpectation("o", true);
  const peg$c149 = /^[Oo]/;
  const peg$c150 = peg$classExpectation(["O", "o"], false, false);
  const peg$c151 = "\\o";
  const peg$c152 = peg$literalExpectation("\\o", true);
  const peg$c153 = function(): any { return "o"; };
  const peg$c154 = "p";
  const peg$c155 = peg$literalExpectation("p", true);
  const peg$c156 = /^[Pp]/;
  const peg$c157 = peg$classExpectation(["P", "p"], false, false);
  const peg$c158 = "\\p";
  const peg$c159 = peg$literalExpectation("\\p", true);
  const peg$c160 = function(): any { return "p"; };
  const peg$c161 = "r";
  const peg$c162 = peg$literalExpectation("r", true);
  const peg$c163 = /^[Rr]/;
  const peg$c164 = peg$classExpectation(["R", "r"], false, false);
  const peg$c165 = "\\r";
  const peg$c166 = peg$literalExpectation("\\r", true);
  const peg$c167 = function(): any { return "r"; };
  const peg$c168 = "s";
  const peg$c169 = peg$literalExpectation("s", true);
  const peg$c170 = /^[Ss]/;
  const peg$c171 = peg$classExpectation(["S", "s"], false, false);
  const peg$c172 = "\\s";
  const peg$c173 = peg$literalExpectation("\\s", true);
  const peg$c174 = function(): any { return "s"; };
  const peg$c175 = "t";
  const peg$c176 = peg$literalExpectation("t", true);
  const peg$c177 = /^[Tt]/;
  const peg$c178 = peg$classExpectation(["T", "t"], false, false);
  const peg$c179 = "\\t";
  const peg$c180 = peg$literalExpectation("\\t", true);
  const peg$c181 = function(): any { return "t"; };
  const peg$c182 = "u";
  const peg$c183 = peg$literalExpectation("u", true);
  const peg$c184 = /^[Uu]/;
  const peg$c185 = peg$classExpectation(["U", "u"], false, false);
  const peg$c186 = "\\u";
  const peg$c187 = peg$literalExpectation("\\u", true);
  const peg$c188 = function(): any { return "u"; };
  const peg$c189 = "x";
  const peg$c190 = peg$literalExpectation("x", true);
  const peg$c191 = /^[Xx]/;
  const peg$c192 = peg$classExpectation(["X", "x"], false, false);
  const peg$c193 = "\\x";
  const peg$c194 = peg$literalExpectation("\\x", true);
  const peg$c195 = function(): any { return "x"; };
  const peg$c196 = "z";
  const peg$c197 = peg$literalExpectation("z", true);
  const peg$c198 = /^[Zz]/;
  const peg$c199 = peg$classExpectation(["Z", "z"], false, false);
  const peg$c200 = "\\z";
  const peg$c201 = peg$literalExpectation("\\z", true);
  const peg$c202 = function(): any { return "z"; };
  const peg$c203 = peg$otherExpectation("whitespace");
  const peg$c204 = peg$otherExpectation("~=");
  const peg$c205 = "~=";
  const peg$c206 = peg$literalExpectation("~=", false);
  const peg$c207 = peg$otherExpectation("|=");
  const peg$c208 = "|=";
  const peg$c209 = peg$literalExpectation("|=", false);
  const peg$c210 = peg$otherExpectation("^=");
  const peg$c211 = "^=";
  const peg$c212 = peg$literalExpectation("^=", false);
  const peg$c213 = peg$otherExpectation("$=");
  const peg$c214 = "$=";
  const peg$c215 = peg$literalExpectation("$=", false);
  const peg$c216 = peg$otherExpectation("*=");
  const peg$c217 = "*=";
  const peg$c218 = peg$literalExpectation("*=", false);
  const peg$c219 = peg$otherExpectation("string");
  const peg$c220 = function(string: any): any { return string; };
  const peg$c221 = peg$otherExpectation("identifier");
  const peg$c222 = function(ident: any): any { return ident; };
  const peg$c223 = peg$otherExpectation("hash");
  const peg$c224 = "#";
  const peg$c225 = peg$literalExpectation("#", false);
  const peg$c226 = function(name: any): any { return "#" + name; };
  const peg$c227 = peg$otherExpectation("function");
  const peg$c228 = "(";
  const peg$c229 = peg$literalExpectation("(", false);

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): FileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: FileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): LiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: ClassParts, inverted: boolean, ignoreCase: boolean): ClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): AnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): EndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): OtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): FileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: FileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: FileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart(): any {
    let s0;

    s0 = peg$parseruleset();

    return s0;
  }

  function peg$parseoperator(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 47) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseS();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseS();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 44) {
        s1 = peg$c3;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c4); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseS();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseS();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c5();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parsecombinator(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 43) {
      s1 = peg$c6;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c7); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseS();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseS();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c8();
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 62) {
        s1 = peg$c9;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseS();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseS();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c11();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseproperty(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseIDENT();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseS();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseS();
      }
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c12(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseruleset(): any {
    let s0, s1, s2, s3, s4, s5, s6;
